tests/compile_fail/invalid_subgrid_line_name_repeat_empty_sets.rs
use surgeist_style::{SubgridLineNameComponent, SubgridLineNameRepeatCount};

fn main() {
    let _subgrid = SubgridLineNameComponent::Repeat {
        count: SubgridLineNameRepeatCount::AutoFill,
        line_name_sets: vec![],
    };
}
